--- a/index.html
+++ b/index.html
@@ -1,217 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Merwin Dale Domingo - Profile</title>
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-    <link href="css/main.css" rel="stylesheet">
-    <!--[if lt IE 9]>
-      <script src="js/html5shiv.js"></script>
-      <script src="js/respond.min.js"></script>
-    <![endif]-->
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-      ga('create', 'UA-51302339-1', 'zaiblitz');
-      ga('send', 'pageview');
-    </script>
-  </head>
-  <body>
-    <div class="container" id="Zai">
-      <div class="row">
-        <div class="col-xs-12">
-          <div id="photo-header" class="text-center">
-            <!-- PHOTO (AVATAR) -->
-            <div id="photo">
-              <img src="images/zai.jpg" alt="avatar">
-            </div>
-            <div id="text-header">
-                <hr/>
-            </div>
+<head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <meta http-equiv="X-UA-Compatible" content="ie=edge">
+      <title>Text Transform</title>
+      <link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet">
+      <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
+      <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+     <div class="content">
+          <div class="random">
+               <span class="nbr ltr">0</span>
+               <span class="nbr ltr">0</span>
+               <span class="nbr ltr">0</span>
+               <span class="nbr ltr">0</span>
+               <span class="nbr ltr">0</span>
+               <span class="nbr ltr">0</span>
+               <span class="nbr ltr">0</span>
+               <span class="nbr ltr">0</span>
+               <span class="nbr ltr">0</span>
+               <span class="nbr ltr">0</span>
           </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-xs-12 col-sm-7">
-          <!-- ABOUT ME -->
-          <div class="box">
-            <h2><i class="fa fa-user"></i> About Me</h2>
-            <p>
-            	Very technical in web development. And can work independently or in a team. I have a good understanding in object oriented and very adept in mvc framework. I also have an extensive experience in front end development and I'm good in laying out pages using  native css and html and also with the used of Twitter Bootstrap. Moveover, I'm knowledgeable in implementing web service api such as Facebook, Twitter, Google etc.
-            </p>
-          </div>
-          <!-- EDUCATION -->
-          <div class="box">
-            <h2>Education</h2>
-            <ul id="education" class="clearfix">
-              <li>
-                <div class="year pull-left">1989</div>
-                <div class="description pull-right">
-                  <h3>I was born in La Union</h3>
-                  <p></p>
-                </div>
-              </li>
-              <li>
-                <div class="year pull-left">2002</div>
-                <div class="description pull-right">
-                  <h3>Sto. Tomas Central School</h3>
-                  <p>Sto. Tomas La Union</p>
-                </div>
-              </li>
-              <li>
-                <div class="year pull-left">2006</div>
-                <div class="description pull-right">
-                  <h3>Saint Mary of The Sea Academy</h3>
-                  <p>Sto. Tomas La Union</p>
-                </div>
-              </li>
-              <li>
-                <div class="year pull-left">2012</div>
-                <div class="description pull-right">
-                  <h3>Mapua Institute of Technology</h3>
-                  <p>Bachelor of Science in Information Technology</p>
-                </div>
-              </li>
-            </ul>
-          </div>
-          <!-- EXPERIENCES -->
-          <div class="box">
-            <h2><i class="fa fa-leanpub"></i> Experiences</h2>
-             <div class="job clearfix">
-              <div class="col-xs-3">
-                <div class="where">Tagcash</div>
-                <div class="year">April 2015 - Present</div>
-              </div>
-              <div class="col-xs-9">
-                <div class="profession">Programmer</div>
-                <div class="description"></div>
-                <div class="technology"> <span>Technology used:</span> PHP, HTML, GIT, CSS, Jquery, HTML, Codeigniter </div>
-              </div>
-            </div>
-            <div class="job clearfix">
-              <div class="col-xs-3">
-                <div class="where">Yondu</div>
-                <div class="year">Feb 2015 - Dec 2015</div>
-              </div>
-              <div class="col-xs-9">
-                <div class="profession">Software Engineer</div>
-                <div class="description">
-                	 Developed a large scale web application called People Central that integrate timekeeping, attendance
-                	 and payroll system to simplify HR task.
-                </div>
-            	<div class="technology"> <span>Technology used:</span> PHP, MySQL, MongoDB, YII </div>
-              </div>
-            </div>
-            <div class="job clearfix">
-              <div class="col-xs-3">
-                <div class="where">Do-net Software</div>
-                <div class="year">Feb 2012 - Dec 2014</div>
-              </div>
-              <div class="col-xs-9">
-                <div class="profession">PHP Programmer</div>
-                <div class="description">Developed a web Sales Management system called Salico for our Japanese client</div>
-                <div class="technology"> <span>Technology used:</span> PHP, MySQL, SVN</div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-xs-12 col-sm-5">
-          <!-- CONTACT -->
-          <div class="box clearfix">
-            <h2><i class="fa fa-phone-square"></i> Contact</h2>
-            <div class="contact-item">
-              <div class="icon pull-left text-center"><span class="fa fa-phone fa-fw"></span></div>
-              <div class="title only pull-right">+63977 325 500</div>
-            </div>
-            <div class="contact-item">
-              <div class="icon pull-left text-center"><span class="fa fa-envelope fa-fw"></span></div>
-              <div class="title only pull-right">merwindale.domingo@gmail.com</div>
-            </div>
-            <div class="contact-item">
-              <div class="icon pull-left text-center"><span class="fa fa-twitter fa-fw"></span></div>
-              <div class="title pull-right">Twitter</div>
-              <div class="description pull-right">https://twitter.com/</div>
-            </div>
-            <div class="contact-item">
-              <div class="icon pull-left text-center"><span class="fa fa-facebook fa-fw"></span></div>
-              <div class="title pull-right">Facebook</div>
-              <div class="description pull-right">https://www.facebook.com/merwindale</div>
-            </div>
-            <div class="contact-item">
-              <div class="icon pull-left text-center"><span class="fa fa-skype fa-fw"></span></div>
-              <div class="title pull-right">Skype</div>
-              <div class="description pull-right">zaiblitz</div>
-            </div>
-          </div>
-          <!-- SKILLS -->
-          <div class="box">
-            <h2><i class="fa fa-laptop"></i>Technical Skills</h2>
-            <div class="skills">
-              <div class="item-skills" data-percent="1.00">HTML</div>
-              <div class="item-skills" data-percent="0.90">CSS</div>
-              <div class="item-skills" data-percent="0.90">jQuery</div>
-              <div class="item-skills" data-percent="0.75">PHP</div>
-              <div class="item-skills" data-percent="0.80">Codeigniter</div>
-              <div class="skills-legend clearfix">
-                <div class="legend-left legend">Beginner</div>
-                <div class="legend-left legend"><span>Proficient</span></div>
-                <div class="legend-right legend"><span>Expert</span></div>
-                <div class="legend-right legend">Master</div>
-              </div>
-            </div>
-          </div>
-          <!-- LANGUAGES -->
-          <div class="box">
-            <h2><i class="fa fa-language"></i> Languages</h2>
-            <div id="language-skills">
-              <div class="skill">English <div class="icons pull-right"><div style="width: 80%;" class="icons-red"></div></div></div>
-              <div class="skill">Tagalog <div class="icons pull-right"><div style="width: 90%;" class="icons-red"></div></div></div>
-            </div>
-          </div>
-          <!-- HOBBIES -->
-          <div class="box">
-            <h2>Hobbies</h2>
-            <div class="hobby">Guitar</div>
-            <div class="hobby">Clash of clan</div>
-            <div class="hobby">Programming</div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- JQUERY -->
-    <script src="js/jquery.min.js"></script>
-    <!-- BOOTSTRAP -->
-    <script src="js/bootstrap.min.js"></script>
-    <!-- SCRIPTS -->
-    <script>
-		function callback() {
-			$('.item-skills').each(function(){
-			newWidth = $(this).parent().width() * $(this).data('percent');
-				$(this).width(0);
-			    $(this).animate({
-			        width: newWidth,
-			    }, 1000);
-				});
-				$('.icons-red').each(function(){
-					height = $(this).height();
-			    $(this).animate({
-			        height: 14,
-			    }, 2000);
-			});
-		}
-		$(document).ready(callback);
-			var resize;
-			window.onresize = function() {
-				clearTimeout(resize);
-				resize = setTimeout(function(){
-				callback();
-			}, 100);
-		};
-    </script>
-  </body>
+     </div>
+
+     <script type="text/javascript">
+
+     $(document).ready(function() {
+
+     var $randomnbr = $('.nbr');
+     var $timer = 30;
+     var $it;
+     var $data = 0;
+     var index;
+     var change;
+     var letters = ["m", "e", "r", "w", "i", "n", "d", "a", "l", "e"];
+
+     $randomnbr.each(function() {
+
+     change = Math.round(Math.random()*100);
+     $(this).attr('data-change', change);
+
+     });
+
+     function random() {
+          return Math.round(Math.random()*9);
+     };
+
+     function select() {
+          return Math.round(Math.random()*$randomnbr.length+1);
+     };
+
+     function value() {
+          $('.nbr:nth-child('+select()+')').html(''+random()+'');
+          $('.nbr:nth-child('+select()+')').attr('data-number', $data);
+          $data++;
+
+          $randomnbr.each(function() {
+               if(parseInt($(this).attr('data-number')) > parseInt($(this).attr('data-change'))) {
+                    index = $('.ltr').index(this);
+                    $(this).html(letters[index]);
+                    $(this).removeClass('nbr');
+               }
+          });
+     };
+
+     $it = setInterval(value, $timer);
+          
+     });
+
+     </script>
+
+</body>
 </html>
