--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
-      <title>Text Transform</title>
+      <title>Welcome To My Page - Merwin Dale</title>
       <link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet">
       <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
       <link rel="stylesheet" href="style.css">
