--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
 
      });
 
+     $('.nbr').on('click', function(){
+        window.location = "http://zaiblitz.github.io/hexgl/";
+     });
+
      function random() {
           return Math.round(Math.random()*9);
      };
