--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
      });
 
      $('.nbr').on('click', function(){
-        window.location = "http://zaiblitz.github.io/hexgl/";
+        window.location = "http://zaiblitz.github.io/HexGL/";
      });
 
      function random() {
