--- a/cashback/index.html
+++ b/cashback/index.html
@@ -17,7 +17,6 @@
     <link rel="stylesheet" href="css/reveal.css">
     <link rel="stylesheet" href="css/black.css" id="theme">
 
-    <!-- Theme used for syntax highlighting of code -->
     <link rel="stylesheet" href="css/zenburn.css">
 
     <!-- Printing and PDF exports -->
@@ -200,15 +199,13 @@ if game was set to 15%, how much cashback will vincent get?</p>
 
     <script>
 
-      // More info https://github.com/hakimel/reveal.js#configuration
       Reveal.initialize({
         controls: true,
         progress: true,
         history: true,
         center: true,
-        transition: 'slide', // none/fade/slide/convex/concave/zoom
+        transition: 'slide', 
 
-        // More info https://github.com/hakimel/reveal.js#dependencies
         dependencies: [
           { src: 'lib/js/classList.js', condition: function() { return !document.body.classList; } },
           { src: 'plugin/markdown/marked.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
@@ -222,7 +219,6 @@ if game was set to 15%, how much cashback will vincent get?</p>
 
     </script>
 
-    <!-- Everything below this point is only used for the reveal.js demo page -->
     <div class="share-reveal" style="display: none; position: absolute; bottom: 16px; left: 50%; margin-left: -139px; z-index: 20;">
       <a class="share-reveal-editor" href="https://www.beeg.com">Want Leakage? Click Here</a>
 
@@ -235,7 +231,6 @@ if game was set to 15%, how much cashback will vincent get?</p>
     </div>
 
     <style>
-      /* Social sharing */
       .share-reveal a {
         display: inline-block;
         height: 34px;
