--- a/cashback/index.html
+++ b/cashback/index.html
@@ -105,7 +105,7 @@
               </tr>
             </tbody>
           </table>
-           <p>Given the rates above, If player placed 300 bet, how much cashback will player get if played on AG</p>
+           <p>Given the rates above, If player placed 300 bet on AG, how much cashback will player get </p>
         </section>
 
        <section>
