--- a/cashback/index.html
+++ b/cashback/index.html
@@ -138,16 +138,28 @@ if game was set to 15%, how much cashback will vincent get?</p>
 
         <section>
           <h4>Command</h4>
-          <p>What is the command use to calculate cashback?</p>
+          <p>What is the command/function use to calculate cashback?</p>
           <ol>
             <li>calculateCashback</li>
             <li>calcPlayerCashback</li>
             <li>calculate_cashback</li>
-            <li>no cashback</li>
+            <li>calculate</li>
             <li>calculatePlayerCashback</li>
           </ol>
         </section>
 
+
+        <section>
+          <h4>Command</h4>
+          <p>What is the command/function use for pay cashback?</p>
+          <ol>
+            <li>payPlayerCashback</li>
+            <li>onlyPayCashback</li>
+            <li>releaseCashback</li>
+            <li>releaseBonusToPlayer</li>
+            <li>none of the above</li>
+          </ol>
+        </section>
 
         <section>
           <h4>Period Settings</h4>
