--- a/cashback/index.html
+++ b/cashback/index.html
@@ -175,7 +175,7 @@ if game was set to 15%, how much cashback will vincent get?</p>
 
         <section>
           <section>
-            <h2>ENUMARATION</h2>
+            <h2>ENUMERATION</h2>
             <p>
               Press arrow down
             </p>
@@ -221,7 +221,7 @@ if game was set to 15%, how much cashback will vincent get?</p>
         dependencies: [
           { src: 'lib/js/classList.js', condition: function() { return !document.body.classList; } },
           { src: 'plugin/markdown/marked.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
-          { src: 'plugin/markdown/markdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
+          { src: 'plugin/markdown/markdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } }, 
           { src: 'plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
           { src: 'plugin/search/search.js', async: true },
           { src: 'plugin/zoom-js/zoom.js', async: true },
