set to alphabetical order

--- a/cashback/index.html
+++ b/cashback/index.html
@@ -243,6 +243,11 @@ if game was set to 15%, how much cashback will vincent get?</p>
     </div>
 
     <style>
+
+      ol {
+        list-style-type: lower-alpha !important;
+      }
+
       .share-reveal a {
         display: inline-block;
         height: 34px;
