--- a/cashback/index.html
+++ b/cashback/index.html
@@ -74,6 +74,20 @@
         </section>
 
         <section>
+          <h4>Rates</h4>
+          <p>What is the sequence in getting percentage in setting</p>
+          <ol>
+            <li>Name -> Type -> Provider -> Default %</li>
+            <li>Type -> Provider -> Name -> Default %</li>
+            <li>Provider -> Type -> Name -> Default %</li>
+            <li>Default % -> Game Name -> Type -> Provider</li>
+          </ol>
+          <blockquote>
+            
+          </blockquote>
+        </section>
+
+        <section>
           <h2>Rate Settings</h2>
           <table>
             <thead>
