--- a/cashback/index.html
+++ b/cashback/index.html
@@ -49,7 +49,7 @@
         </section>
 
         <section>
-          <h4>Cashback is calc based on</h4>
+          <h4>1. Cashback is calc based on</h4>
           <ol>
             <li>total lost amount</li>
             <li>total win amount</li>
@@ -58,8 +58,8 @@
           </ol>
         </section>
 
-         <section>
-          <h4>Formula</h4>
+         <section  data-background-transition="zoom">
+          <h4>2. Formula</h4>
           <p>What is the formula of cashback ?</p>
           <ol>
             <li><code>bet amount*((rate/100)-WC)</code></li>
@@ -74,7 +74,7 @@
         </section>
 
         <section>
-          <h4>Rates</h4>
+          <h4>3. Rates</h4>
           <p>What is the sequence in getting percentage in setting</p>
           <ol>
             <li>Name -> Type -> Provider -> Default %</li>
@@ -87,8 +87,95 @@
           </blockquote>
         </section>
 
+       <section>
+          <h4>4. Computation</h4>
+          <p>Junjun played in baccarrat, he placed bet 30 on PLAYER and 30 on Banker.
+If game was set to 0.4% How much cashback he will get?</p>
+          <ol>
+            <li>0.09</li>
+            <li>0.03</li>
+            <li>0.04</li>
+            <li>no cashback</li>
+            <li>4</li>
+          </ol>
+        </section>
+
+
         <section>
-          <h2>Rate Settings</h2>
+          <h4>5. Computation</h4>
+          <p>Vincent played in Pornhub Game. If he placed 300 bet. Regardless of withdraw condition,
+if game was set to 15%, how much cashback will vincent get?</p>
+          <ol>
+            <li>3</li>
+            <li>0.03</li>
+            <li>0.15</li>
+            <li>0.12</li>
+            <li>no cashback</li>
+          </ol>
+        </section>
+
+
+        <section>
+          <h4>6. Command</h4>
+          <p>What is the command/function use to calculate cashback?</p>
+          <ol>
+            <li>calculateCashback</li>
+            <li>calcPlayerCashback</li>
+            <li>calculate_cashback</li>
+            <li>calculate</li>
+            <li>calculatePlayerCashback</li>
+          </ol>
+        </section>
+
+
+        <section>
+          <h4>7. Command</h4>
+          <p>What is the command/function use for pay cashback?</p>
+          <ol>
+            <li>payPlayerCashback</li>
+            <li>onlyPayCashback</li>
+            <li>releaseCashback</li>
+            <li>releaseBonusToPlayer</li>
+            <li>none of the above</li>
+          </ol>
+        </section>
+
+        <section>
+          <h4>8. Period Settings</h4>
+          <p>Cashback period can be set on</p>
+          <ol>
+            <li>Daily or Weekly</li>
+            <li>Only Daily</li>
+            <li>Monthly</li>
+            <li>Yearly</li>
+            <li>Every 30 minutes</li>
+          </ol>
+        </section>
+
+        <section>
+          <section>
+            <h2>ENUMERATION</h2>
+            <p>
+              Press arrow down
+            </p>
+          </section>
+          <section data-background="gray">
+            <h2>9. No Cashback</h2>
+            <p>
+              Give atleast 5 reasons why players doesn't recieved cashback
+            </p>
+          </section>
+
+          <section data-background="gray">
+            <h2>10. Types of Cashback</h2>
+            <p>
+              List two types of cashback
+            </p>
+          </section>
+        </section>
+
+        <section>
+          <h2>11. Rate Settings</h2>
           <table>
             <thead>
               <tr>
@@ -122,99 +209,14 @@
            <p>Given the rates above, If player placed 300 bet on AG, how much cashback will player get </p>
         </section>
 
-       <section>
-          <h4>Computation</h4>
-          <p>Junjun played in baccarrat, he placed bet 30 on PLAYER and 30 on Banker.
-If game was set to 0.4% How much cashback he will get?</p>
-          <ol>
-            <li>0.09</li>
-            <li>0.03</li>
-            <li>0.04</li>
-            <li>no cashback</li>
-            <li>4</li>
-          </ol>
-        </section>
-
-
-        <section>
-          <h4>Computation</h4>
-          <p>Vincent played in Pornhub Game. If he placed 300 bet. Regardless of withdraw condition,
-if game was set to 15%, how much cashback will vincent get?</p>
-          <ol>
-            <li>3</li>
-            <li>0.03</li>
-            <li>0.15</li>
-            <li>0.12</li>
-            <li>no cashback</li>
-          </ol>
-        </section>
-
-
-        <section>
-          <h4>Command</h4>
-          <p>What is the command/function use to calculate cashback?</p>
-          <ol>
-            <li>calculateCashback</li>
-            <li>calcPlayerCashback</li>
-            <li>calculate_cashback</li>
-            <li>calculate</li>
-            <li>calculatePlayerCashback</li>
-          </ol>
-        </section>
-
-
-        <section>
-          <h4>Command</h4>
-          <p>What is the command/function use for pay cashback?</p>
-          <ol>
-            <li>payPlayerCashback</li>
-            <li>onlyPayCashback</li>
-            <li>releaseCashback</li>
-            <li>releaseBonusToPlayer</li>
-            <li>none of the above</li>
-          </ol>
-        </section>
-
-        <section>
-          <h4>Period Settings</h4>
-          <p>Cashback period can be set on</p>
-          <ol>
-            <li>Daily or Weekly</li>
-            <li>Only Daily</li>
-            <li>Monthly</li>
-            <li>Yearly</li>
-            <li>Every 30 minutes</li>
-          </ol>
-        </section>
-
-        <section>
-          <section>
-            <h2>ENUMERATION</h2>
-            <p>
-              Press arrow down
-            </p>
-          </section>
-          <section data-background="gray">
-            <h2>No Cashback</h2>
-            <p>
-              Give atleast 5 reasons why players doesn't recieved cashback
-            </p>
-          </section>
-
-          <section data-background="gray">
-            <h2>Types of Cashback</h2>
-            <p>
-              List two types of cashback
-            </p>
-          </section>
-        </section>
-
         <section style="text-align: left;">
           <h1>THE END</h1>
           <p>
             - <a href="https://slides.com">Good Luck!</a> <br>
           </p>
         </section>
+
+
 
       </div>
 
