--- a/cashback/index.html
+++ b/cashback/index.html
@@ -55,6 +55,7 @@
             <li>total win amount</li>
             <li>total bet amount</li>
             <li>total result amount</li>
+            <li>total deposit</li>
           </ol>
         </section>
 
@@ -104,10 +105,10 @@ If game was set to 0.4% How much cashback he will get?</p>
         <section>
           <h4>5. Computation</h4>
           <p>Vincent played in Pornhub Game. If he placed 300 bet. Regardless of withdraw condition,
-if game was set to 15%, how much cashback will vincent get?</p>
+if game was set to .8%, how much cashback will vincent get?</p>
           <ol>
             <li>3</li>
-            <li>0.03</li>
+            <li>2.4</li>
             <li>0.15</li>
             <li>0.12</li>
             <li>no cashback</li>
@@ -209,7 +210,28 @@ if game was set to 15%, how much cashback will vincent get?</p>
            <p>Given the rates above, If player placed 300 bet on AG, how much cashback will player get </p>
         </section>
 
-        <section style="text-align: left;">
+        <section>
+          <h4>12. True or False</h4>
+          <p>Referral Cashback has a fixed percentage for all game</p>
+        </section>
+
+        <section>
+          <h4>13. True or False</h4>
+          <p>If player have no game logs, he/she still can get cashback</p>
+        </section>
+
+        <section>
+          <h4>14. True or False</h4>
+          <p>Common Cashback Rules settings can be blocked or can be set to active</p>
+        </section>
+
+        <section>
+          <h4>15. True or False</h4>
+          <p>Cashback cannot use to play game</p>
+        </section>
+
+
+        <section style="text-align: left;" data-background="#4d7e65">
           <h1>THE END</h1>
           <p>
             - <a href="https://slides.com">Good Luck!</a> <br>
