--- a/cashback/index.html
+++ b/cashback/index.html
@@ -231,13 +231,15 @@ if game was set to .8%, how much cashback will vincent get?</p>
         </section>
 
 
-        <section style="text-align: left;" data-background="#4d7e65">
+        <section style="text-align: left;">
           <h1>THE END</h1>
+            <a href="#" class="navigate-down">
+              <img width="250" height="350" data-src="images/oppa.jpg" alt="Down arrow">
+            </a>
           <p>
             - <a href="https://slides.com">Good Luck!</a> <br>
           </p>
         </section>
-
 
 
       </div>
