--- a/cashback/index.html
+++ b/cashback/index.html
@@ -231,7 +231,7 @@ if game was set to .8%, how much cashback will vincent get?</p>
         </section>
 
 
-        <section style="text-align: left;">
+        <section >
           <h1>THE END</h1>
             <a href="#" class="navigate-down">
               <img width="250" height="350" data-src="images/oppa.jpg" alt="Down arrow">
