--- a/cashback/index.html
+++ b/cashback/index.html
@@ -41,7 +41,7 @@
       <div class="slides">
         <section>
           <h1>Cashback Exam</h1>
-          <h3>The HTML Presentation Framework</h3>
+          <h3>Tripleone Technology</h3>
           <p>
             <small>Created by <a href="http://hakim.se">Merwin Dale Domingo</a></small>
           </p>
@@ -49,7 +49,7 @@
         </section>
 
         <section>
-          <h4>1. Cashback is calc based on</h4>
+          <h4>1. Cashback is calculated based on</h4>
           <ol>
             <li>total lost amount</li>
             <li>total win amount</li>
@@ -62,30 +62,31 @@
          <section  data-background-transition="zoom">
           <h4>2. Formula</h4>
           <p>What is the formula of cashback ?</p>
+          <small>
           <ol>
-            <li><code>bet amount*((rate/100)-WC)</code></li>
+            <li>bet amount*((rate/100)-WC)</li>
             <li>result amount * ( rate / 100 )</li>
             <li>loss amount - WC * ( rate / 100 )</li>
             <li>bet amount - WC * (rate / 100 )</li>
             <li>bet amount * (rate / 100 )</li>
           </ol>
+          </small>
           <blockquote>
-             Note : WC stands for withdrawal condition
+             <small>Note : WC stands for withdrawal condition</small>
           </blockquote>
         </section>
 
         <section>
           <h4>3. Rates</h4>
-          <p>What is the sequence in getting percentage in setting</p>
+          <p>What is the sequence in getting right percentage in setting</p>
+          <small>
           <ol>
             <li>Name -> Type -> Provider -> Default %</li>
             <li>Type -> Provider -> Name -> Default %</li>
             <li>Provider -> Type -> Name -> Default %</li>
             <li>Default % -> Game Name -> Type -> Provider</li>
           </ol>
-          <blockquote>
-            
-          </blockquote>
+          </small>
         </section>
 
        <section>
