--- a/cashback/index.html
+++ b/cashback/index.html
@@ -43,7 +43,7 @@
           <h1>Cashback Exam</h1>
           <h3>Tripleone Technology</h3>
           <p>
-            <small>Created by <a href="http://hakim.se">Merwin Dale Domingo</a></small>
+            <small>Prepared by <a href="http://hakim.se">Merwin Dale Domingo</a></small>
           </p>
         
         </section>
