--- a/work_notes/tripleone/index.html
+++ b/work_notes/tripleone/index.html
@@ -44,7 +44,7 @@
                     <a href="#gameIntegration" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Game Integration</a>
                     <ul class="collapse list-unstyled" data-content="game" id="gameIntegration">
                         <li><a href="#gi-command.html">Command</a></li>
-                        <li><a href="#gi-game_launcher.html" >GameLinks</a></li>
+                        <li><a href="#gi-game_launcher.html" >Game Url</a></li>
                         <li><a href="#gi-api_notes.html">API Notes</a></li>
                     </ul>
                 </li>
