--- a/work_notes/tripleone/index.html
+++ b/work_notes/tripleone/index.html
@@ -61,7 +61,10 @@
                     <a href="#">Fund Transfer</a>
                 </li>
                 <li>
-                    <a href="#">SQL</a>
+                    <a href="#sql" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">SQL</a>
+                    <ul class="collapse list-unstyled" data-content="sql" id="sql">
+                        <li><a href="#sql-misc.html">Miscellaneous</a></li>
+                    </ul>
                 </li>
                 <li>
                     <a href="#">Services</a>
