--- a/work_notes/tripleone/gi-command.html
+++ b/work_notes/tripleone/gi-command.html
@@ -6,9 +6,10 @@
     .button-info {
         margin-left:-23px;
     }
-
+    .test {
+         border-right: 1px solid #ddd;
+    }
 </style>
-
 <div class="col-xs-6">
     <div class="col-xs-8"><pre><code>sudo ./command/calculateCashback.sh</code></pre></div>
     <div class="col-xs-4 button-info">
@@ -16,12 +17,9 @@
         <button>Edit</button>
         <button> <span class="glyphicon glyphicon-info-sign"></span></button>
     </div>
+    <div class="col-xs-12 border">TEST</div>
 </div>
-
-<div class="col-xs-6">
-</div>
-
-
+<div class="col-xs-6"></div>
 <script>
     $(document).ready(function(){
         console.log('ok');
