--- a/index.html
+++ b/index.html
@@ -100,11 +100,11 @@
 					<p>Full Stack Developer</p>
 					<div class="follow-me">
 						<ul>
-							<li><a href="https://www.facebook.com/merwindale"><i class="fa fa-facebook"></i></a></li>
-							<li><a href="https://twitter.com/zaiblitz"><i class="fa fa-twitter"></i></a></li>
-							<li><a href="https://www.instagram.com/zaiblitz/"><i class="fa fa-instagram"></i></a></li>
-							<li><a href="https://www.linkedin.com/in/merwindaledomingo"><i class="fa fa-linkedin"></i></a></li>
-							<li><a href="index-2.html#"><i class="fa fa-google-plus"></i></a></li>
+							<li><a target="_blank" href="https://www.facebook.com/merwindale"><i class="fa fa-facebook"></i></a></li>
+							<li><a target="_blank" href="https://twitter.com/zaiblitz"><i class="fa fa-twitter"></i></a></li>
+							<li><a target="_blank" href="https://www.instagram.com/zaiblitz/"><i class="fa fa-instagram"></i></a></li>
+							<li><a target="_blank" href="https://www.linkedin.com/in/merwindaledomingo"><i class="fa fa-linkedin"></i></a></li>
+							<li><a target="_blank" href="index-2.html#"><i class="fa fa-google-plus"></i></a></li>
 						</ul>
 					</div>
 				</div>
