--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 			<div class="col-md-3 col-sm-3">
 				<div class="logo">
 					<a href="http://codexboss.com/oniha/oniha/index-particle.html">
-						<p>oniha</p>
+						<p>oppa</p>
 					</a>
 				</div>
 			</div>
