--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 		<div class="row">
 			<div class="col-md-3 col-sm-3">
 				<div class="logo">
-					<a href="http://codexboss.com/oniha/oniha/index-particle.html">
-						<p>oppa</p>
+					<a href="#">
+						<p>Zaiblitz</p>
 					</a>
 				</div>
 			</div>
@@ -96,7 +96,7 @@
 		<div class="row">
 			<div class="col-md-12">
 				<div class="slider-title">
-					<h1>Merwin Dale Domingo</h1>
+					<h1>Merwin Dale</h1>
 					<p>Full Stack Developer</p>
 					<div class="follow-me">
 						<ul>
@@ -120,7 +120,8 @@
 			<div class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 col-xs-12">
 				<div class="section-title text-center pb-1">
 					<h2>about me</h2>
-					<p>Lorem ipsum dolor sit amet, inani legimus vis ne.Vitae lobortis oportere no sit,erat ignota adipiscing usu legimus vis ne</p>
+					<p>Experienced PHP Developer with a demonstrated history of working in the computer software industry
+					</p>
 				</div>
 			</div>
 		</div>
@@ -141,7 +142,8 @@
 			<div class="col-md-6 col-sm-6 col-xs-12">
 				<div class="about-info">
 					<h2>I'm Merwin Dale,<br>web designer & Developer</h2>
-					<p>Lorem ipsum dolor sit amet, inani legimus vis ne. There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't lookThere are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't lookThere are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration</p>
+					<p>Very technical in 5 years of work experience in web development using LAMP/WAMPP.  Has strong understanding in Object Oriented Programming and a huge experience in developing large-scale AJAX. Has an exceptional knowledge of PHP, HTML/CSS, JAVASCRIPT, JQUERY and XML and has a good expertise in Model-View-Controller (MVC) framework. 
+					</p>
 				</div>
 				<div class="row">
 					<div class="col-md-6 col-sm-6">
@@ -340,8 +342,8 @@
 								<i class="fa fa-check-square-o"></i>
 							</div>
 							<div class="resume-content">
-								<span>2010-Continue</span>
-								<h4>Themeforest</h4>
+								<span>2019-Present</span>
+								<h4>EK Consulting</h4>
 								<p>Mauris magna sapien, pharetra consectetur fringilla vitae, interdum sed tortor.</p>
 							</div>
 						</div>
@@ -350,8 +352,8 @@
 								<i class="fa fa-check-square-o"></i>
 							</div>
 							<div class="resume-content">
-								<span>2010-2012</span>
-								<h4>Upwork</h4>
+								<span>2016-2019</span>
+								<h4>Tripleone Technology</h4>
 								<p>Mauris magna sapien, pharetra consectetur fringilla vitae, interdum sed tortor.</p>
 							</div>
 						</div>
@@ -360,8 +362,8 @@
 								<i class="fa fa-check-square-o"></i>
 							</div>
 							<div class="resume-content">
-								<span>2010-2012</span>
-								<h4>Oracle Corporation</h4>
+								<span>2015-2016</span>
+								<h4>Tagcash</h4>
 								<p>Mauris magna sapien, pharetra consectetur fringilla vitae, interdum sed tortor.</p>
 							</div>
 						</div>
