--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="description" content="oniha Personal Portfolio Template">
 	<meta name="keywords" content="codexboss, new, html, oniha, design, creative, onepage, portfolio, personal, modern">
 
-	<title> oniha Portfolio Profile</title>
+	<title>Merwin Dale - Profile</title>
 
 	<script src="/cdn-cgi/apps/head/2wQqIqbkVmDGNmRCcMF1brFtF0E.js"></script><link href="https://fonts.googleapis.com/css?family=Raleway:300,400,400i,500,600,700,800" rel="stylesheet">
 
