--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 			<div class="col-md-6 col-sm-6 col-xs-12">
 				<div class="about-author owl-carousel">
 					<div class="about-image">
-						<img src="http://preview.themes.emmotivity.com/oniha/oniha/assets/images/me1.jpg" alt="author-image">
+						<img src="portfolio/images/me1.jpg" alt="author-image">
 					</div>
 					<div class="about-image">
 						<img src="http://preview.themes.emmotivity.com/oniha/oniha/assets/images/me2.jpg" alt="author-image">
